# golongtail

./: .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  build_lib.bat  go.mod  go.sum  go.work  go.work.sum  go_longtail _test.go  go_longtail.go  go_longtail_test.go  main.go  travis-cl.sh  travis-clang.sh  update-longtail-lib.ps1
.github/workflows/: codeql.yml  create-release.yml  linux-build.yml  macos-build.yml  master-build.yml  pr-build.yml  pr-linux-build.yml  pr-windows-build.yml  windows-build.yml
cmd/: BUILD.bazel  blobStore.go  build.bat  build.sh  cmd.go  fsBlobStore.go  gcsBlobStore.go  go.mod  go.sum  gscBlobStore.go  longtail.go
cmd/longtail/: build.bat  build.sh  cmd_clonestore.go  cmd_cp.go  cmd_createversionstoreindex.go  cmd_downsync.go  cmd_dump.go  cmd_dumpversionassets.go  cmd_get.go  cmd_init.go  cmd_initremotestore.go  cmd_ls.go  cmd_printVersionUsage.go  cmd_printstore.go  cmd_printstoreindex.go  cmd_printversion.go  cmd_printversionindex.go  cmd_prunestore.go  cmd_stats.go  cmd_upsync.go  cmd_validate.go  cmd_validateversion.go  console.json  dis.json  folderscanner.go  go.mod  go.sum  longtail.csv  main.go  memtrace.csv  test-all.sh  test.json  utils.go
cmd/longtail/.longtail/store/chunks/38e6/: 0x38e607ecff2de3ff.lsb
commands/: cmd_clonestore.go  cmd_clonestore_test.go  cmd_cp.go  cmd_cp_test.go  cmd_createversionstoreindex.go  cmd_createversionstoreindex_test.go  cmd_downsync.go  cmd_downsync_test.go  cmd_dumpversionassets.go  cmd_dumpversionassets_test.go  cmd_get.go  cmd_get_test.go  cmd_initremotestore.go  cmd_initremotestore_test.go  cmd_ls.go  cmd_ls_test.go  cmd_pack.go  cmd_pack_test.go  cmd_pop.go  cmd_printVersionUsage.go  cmd_printstore.go  cmd_printstore_test.go  cmd_printversion.go  cmd_printversion_test.go  cmd_printversionusage_test.go  cmd_prune_blocks.go  cmd_prune_storeblocks.go  cmd_prunestore.go  cmd_prunestore_block_test.go  cmd_prunestore_blocks.go  cmd_prunestore_index.go  cmd_prunestore_index_test.go  cmd_prunestore_test.go  cmd_push.go  cmd_put.go  cmd_server.go  cmd_unpack.go  cmd_unpack_test.go  cmd_upsync.go  cmd_upsync_test.go  (+8 more)
golongtail/: go.mod  go.sum  golongtail.go  golongtail.h  golongtail_test.go  lib_darwin_amd64.go  lib_linux_amd64.go  lib_windows_amd64.go  test.bat  test.sh
golongtail/import/: build_lib.bat  build_lib.sh
lib/: BUILD.bazel  go.mod  golongtail.go  golongtail.h  golongtail_test.go  lib_darwin_amd64.go  lib_linux_amd64.go  lib_windows_amd64.go  test.bat  test.sh
lib/import/: BUILD.bazel  build_debug_lib.bat  build_lib.bat  build_lib.sh
lib/import/lib/: BUILD.bazel
lib/import/lib/bikeshed/: BUILD.bazel
lib/import/lib/blake2/: BUILD.bazel
lib/import/lib/blake3/: BUILD.bazel
lib/import/lib/blake3/ext/: BUILD.bazel
lib/import/lib/brotli/: BUILD.bazel
lib/import/lib/cacheblockstore/: longtail_cacheblockstore.c
lib/import/lib/filestorage/: BUILD.bazel
lib/import/lib/fsblockstore/: longtail_fsblockstore.c
lib/import/lib/lizard/: BUILD.bazel
lib/import/lib/lizard/ext/: BUILD.bazel
lib/import/lib/lz4/: BUILD.bazel
lib/import/lib/lz4/ext/: BUILD.bazel
lib/import/lib/memstorage/: BUILD.bazel
lib/import/lib/meowhash/: BUILD.bazel
lib/import/lib/zstd/: BUILD.bazel
lib/import/lib/zstd/ext/: BUILD.bazel
lib/import/src/: longtail.c
longtail/: go.mod  golongtail.h  longtail.go  longtail_test.go
longtail/import/: build_lib.bat  build_lib.sh
longtail/import/lib/bikeshed/: longtail_bikeshed.c
longtail/import/src/: longtail.c
longtail/src/: longtail.c  longtail.h
longtaillib/: build_longtail.bat  build_longtail.sh  build_longtail_debug.bat  go.mod  go.sum  golongtail.go  golongtail.h  golongtail_test.go  lib_darwin_amd64.go  lib_linux_amd64.go  lib_windows_amd64.go  longtail_blake2.go  longtail_blake3.go  longtail_blake3_arch.go  longtail_blake3_avx2.go  longtail_blake3_avx512.go  longtail_blake3_sse41.go  longtail_brotli.go  longtail_brotli_common.go  longtail_brotli_dec.go  longtail_brotli_enc1.go  longtail_brotli_enc2.go  longtail_brotli_enc3.go  longtail_brotli_enc4.go  longtail_brotli_enc5.go  longtail_brotli_fuzz.go  longtail_cacheblockstore.go  longtail_compressblockstore.go  longtail_compressionregistry.go  longtail_darwin_amd64.go  longtail_darwin_arm64.go  longtail_direct.go  longtail_direct_test.go  longtail_hashregistry.go  longtail_lib.go  longtail_lib_platform_darwin.go  longtail_lib_platform_linux.go  longtail_lib_platform_windows.go  longtail_linux_amd64.go  longtail_lz4.go  (+12 more)
longtaillib/longtail/lib/compressionregistry/: longtail_full_compression_registry.c
longtailstorelib/: blobStore.go  blobStore_test.go  fileBlobStore_test.go  fileStorage.go  fsstore.go  fsstore_darwin_amd64.go  fsstore_linux_amd64.go  fsstore_test.go  fsstore_unix_amd64.go  fsstore_windows_amd64.go  gcsBlobStore_test.go  gcsstore.go  go.mod  go.sum  memblobstore.go  remotestore.go  remotestore_test.go  s3BlobStore_test.go  s3Store.go  s3Store_test.go  statsstore.go  utils.go
longtailutils/: debug.go  folderscanner.go  go.mod  go.sum  longtailutils.go  pathfilter.go  progress.go  stats.go
remotestore/: blob_lsi_store.go  go.mod  go.sum  lsistore.go  lsistore_test.go  remotestore.go  remotestore_legacy.go  remotestore_legacy_test.go  remotestore_test.go
store/: BUILD.bazel  blobStore.go  fileStorage.go  fsBlobStore.go  fsBlockStore.go  fsstore.go  gcsBlobStore.go  gcsBlockStore.go  gcsstore.go  go.mod  go.sum
