load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["longtail.go"],
    importpath = "github.com/DanEngelbrecht/golongtail/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "@golongtail_lib//:go_default_library",
        "//store:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
    ],
)

go_binary(
    name = "longtail",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
