load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blobStore.go",
        "fsBlobStore.go",
        "gcsBlobStore.go",
    ],
    importpath = "github.com/DanEngelbrecht/golongtail/store",
    visibility = ["//visibility:public"],
    deps = [
        "//lib:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
    ],
)
