cc_library(
    name = "bikeshed",
    srcs = [ "longtail_bikeshed.c",
             "longtail_bikeshed.h",
             "ext/bikeshed.h",
    ],
    hdrs = [ "longtail_bikeshed.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
