cc_library(
    name = "longtail_blake3",
    srcs = [ "longtail_blake3.c",
             "longtail_blake3.h",
    ],
    copts = [ "-msse4.1" ],
    hdrs = [ "longtail_blake3.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail",
             "//import/lib/blake3/ext:blake3",
    ],
    visibility = [ "//:__subpackages__" ],
)
