cc_library(
    name = "longtail_brotli",
    srcs = glob([ "longtail_brotli.c",
                  "longtail_brotli.h",
                  "ext/**/*.c",
                  "ext/**/*.h",
    ]),
    copts = [ "-O3 -maes -std=gnu99 -msse4.1" ],
    hdrs = [ "longtail_brotli.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
 
