cc_library(
    name = "longtail_filestorage",
    srcs = [ "longtail_filestorage.c",
             "longtail_filestorage.h",
    ],
    hdrs = [ "longtail_filestorage.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
