cc_library(
    name = "longtail_filestorage",
    srcs = [ "longtail_filestorage.c",
             "longtail_filestorage.h",
    ],
    copts = [ "-O3 -maes -std=gnu99 -msse4.1" ],
    hdrs = [ "longtail_filestorage.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
