cc_library(
    name = "longtail_lizard",
    srcs = [ "longtail_lizard.c",
             "longtail_lizard.h",
    ],
    hdrs = [ "longtail_lizard.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail",
             "//import/lib/lizard/ext:lizard",
    ],
    visibility = [ "//:__subpackages__" ],
)
