cc_library(
    name = "longtail_lizard",
    srcs = [ "longtail_lizard.c",
             "longtail_lizard.h",
    ],
    copts = [ "-O3 -maes -std=gnu99 -msse4.1" ],
    hdrs = [ "longtail_lizard.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail",
             "//import/lib/lizard/ext:lizard",
    ],
    visibility = [ "//:__subpackages__" ],
)
