cc_library(
    name = "longtail_memstorage",
    srcs = [ "longtail_memstorage.c",
             "longtail_memstorage.h",
    ],
    copts = [ "-O3 -maes -std=gnu99 -msse4.1" ],
    hdrs = [ "longtail_memstorage.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
