cc_library(
    name = "longtail_meowhash",
    srcs = [ "longtail_meowhash.c",
             "longtail_meowhash.h",
             "ext/meow_hash_x64_aesni.h",
    ],
    copts = [ "-msse4.1 -maes" ],
    hdrs = [ "longtail_meowhash.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
