cc_library(
    name = "longtail_meowhash",
    srcs = [ "longtail_meowhash.c",
             "longtail_meowhash.h",
             "ext/meow_hash_x64_aesni.h",
    ],
    copts = [ "-O3 -maes -std=gnu99 -msse4.1" ],
    hdrs = [ "longtail_meowhash.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail" ],
    visibility = [ "//:__subpackages__" ],
)
