cc_library(
    name = "longtail_zstd",
    srcs = [ "longtail_zstd.c",
             "longtail_zstd.h",
    ],
    hdrs = [ "longtail_zstd.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail",
             "//import/lib/zstd/ext:zstd",
    ],
    visibility = [ "//:__subpackages__" ],
)
