cc_library(
    name = "longtail_zstd",
    srcs = [ "longtail_zstd.c",
             "longtail_zstd.h",
    ],
    copts = [ "-O3 -maes -std=gnu99 -msse4.1" ],
    hdrs = [ "longtail_zstd.h" ],
    deps = [ "//import/lib:longtail_platform",
             "//import:longtail",
             "//import/lib/zstd/ext:zstd",
    ],
    visibility = [ "//:__subpackages__" ],
)
