cc_library(
    name = "blake3",
    srcs = [
        "blake3_avx2.c",
        "blake3_avx512.c",
        "blake3.c",
        "blake3_dispatch.c",
        "blake3.h",
        "blake3_impl.h",
        "blake3_neon.c",
        "blake3_portable.c",
        "blake3_sse41.c",
    ],
    copts = [ "-msse4.1 -O3" ],
    hdrs = [ "blake3.h" ],
    visibility = [ "//import/lib/blake3:__subpackages__" ],
)
